XWIKI-19078: Make XWiki execute fine on Java 17 with the standalone distribution on linux